--- a/frontend/templates/style.css
+++ b/frontend/templates/style.css
@@ -1,9 +1,4 @@
 #main {
-    display: flex;
-    align-items: flex-start;
-    justify-content: start;
-    flex-wrap: wrap;
-    flex-direction: row;
     margin: 0px;
     padding: 0px;
 }
@@ -13,8 +8,11 @@
     background-color: #cccccc;
     background-repeat: round;
     background-size: cover;
-    margin: 0px;
-    padding: 0px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: start;
+    flex-wrap: wrap;
+    flex-direction: row;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -55,11 +53,32 @@ body {
     size: 50px;
     padding: 30px 0px;
     text-align: center;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-transform: uppercase;
 }
 
 .text-name {
     font-size: 20px;
     text-align: center;
+}
+
+.text-font {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.stock-controls {
+    display: flex;
+    flex-direction: column;
+}
+
+.plus {
+    font-size: 50px;
+    font-weight: 800;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    border-radius: 50px;
+    border-style: solid;
+    border-width: 3px;
+    display: flex;
+    cursor: pointer;
 }
