feat: add plus sign

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
 
-                <div class="box glass">
+                <div class="box plus-box glass">
                     <p class="plus" v-on:click="addCard()">+</p>
                 </div>
                 
