--- a/frontend/templates/style.css
+++ b/frontend/templates/style.css
@@ -10,7 +10,7 @@
     background-size: cover;
     display: flex;
     align-items: flex-start;
-    justify-content: start;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     flex-direction: row;
     position: absolute;
@@ -73,12 +73,15 @@ body {
 .plus {
     font-size: 50px;
     font-weight: 800;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
+    padding: 20px 33px;
     border-radius: 50px;
     border-style: solid;
     border-width: 3px;
     display: flex;
     cursor: pointer;
+}
+
+.plus-box {
+    justify-content: center;
+    align-items: center;
 }
