--- a/frontend/templates/style.css
+++ b/frontend/templates/style.css
@@ -30,6 +30,14 @@
 
 }
 
+.header {
+    background-color: white;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
 .box {
     margin: 10px;
     padding: 12px;
@@ -51,7 +59,7 @@ body {
     border: none;
     font-size: 50px;
     size: 50px;
-    padding: 30px 0px;
+    padding: 10px 0px;
     text-align: center;
     text-transform: uppercase;
 }
