--- a/frontend/templates/style.css
+++ b/frontend/templates/style.css
@@ -4,7 +4,8 @@
 }
 
 .background {
-    background-image: url("./backgrond.png"); 
+    /* Davmormar, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons */
+    background-image: url("./background.jpg"); 
     background-color: #cccccc;
     background-repeat: round;
     background-size: cover;
