--- a/frontend/templates/style.css
+++ b/frontend/templates/style.css
@@ -31,14 +31,6 @@
 
 }
 
-.header {
-    background-color: white;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-}
-
 .box {
     margin: 10px;
     padding: 12px;
@@ -93,4 +85,28 @@ body {
 .plus-box {
     justify-content: center;
     align-items: center;
+}
+
+.header {
+    background-color: white;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-label {
+    padding-left: 20px;
+    padding-right: 10px;
+}
+
+.header-submit {
+    padding: 0px 20px;
+    border: none;
+    background-color: light-grey;
+    height: 100%;
+}
+
+.header-submit:hover {
+    background-color: orange;
 }
